# veterinaria

app_movil/: .env  App.js  app.config.js  color.js  package.json
app_movil/config/: firebase.js
app_movil/screens/: Chat.js  Home.js  Login.js  Signup.js
app_web/: package-lock.json  package.json
app_web/src/: index.js  utils.js
app_web/src/app/: App.jsx
app_web/src/app/components/: Typography.js
app_web/src/app/components/Brand/: Brand.jsx
app_web/src/app/components/Breadcrumb/: Breadcrumb.jsx
app_web/src/app/components/Footer/: Footer.jsx
app_web/src/app/components/Loadable/: Loadable.jsx
app_web/src/app/components/MatxLayout/: index.js
app_web/src/app/components/MatxLoading/: MatxLoading.jsx
app_web/src/app/contexts/: JWTAuthContext.js  NotificationContext.js  SettingsContext.js
app_web/src/app/hooks/: useNotification.js  useSettings.js
app_web/src/app/redux/: Store.js
app_web/src/app/routes/: routes.jsx
backend/: LICENSE  admin.py  pyproject.toml
backend/app/: database.py  helpers.py  main.py
backend/app/core/: config.py
backend/migrations/: env.py
backend/migrations/versions/: 3db1743112a6_update_products_table.py  b7822ad1690e_add_users_table.py  c3313e421956_update_users_table.py  f79cb266ea0f_added_category_and_product_models.py
backend/product/: crud.py  helpers.py  models.py  schemas.py
backend/product/api/: controller.py
backend/tests/: __init__.py  conftest.py  test_users_api.py  test_users_authenticate.py
backend/users/: __init__.py  authentication.py  models.py  schemas.py
backend/users/api/: controller.py
(+52 files in other folders)
