[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jonanfu <jonanfu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
gino = {extras = ["pg", "starlette"], version = "^1.0.1"}
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
alembic = "^1.7.5"
psycopg2 = "^2.9.3"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
gino-admin = "^0.3.0"
python-multipart = "^0.0.5"
Pillow = "^9.0.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^20.8b1"
requests = "^2.27.1"
pytest-asyncio = "^0.16.0"
httpx = "^0.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
